--- a/code/index.html
+++ b/code/index.html
@@ -8,11 +8,16 @@
     <title>Momentum</title>
 </head>
 <body>
+    <h2 id="clock">00:00</h2>
     <form id="login-form" class="hidden">
         <input type="text" required maxlength="15" placeholder="What is your name?" />
         <input type="submit" value="Log In" />
     </form>
-    <h2 id="clock">00:00</h2>
+    <h1 id="greeting" class="hidden"></h1>
+    <form id="todo-form">
+        <input type="text" placeholder="Write a To Do and Press Enter" required/>
+    </form>
+    <ul id="todo-list"></ul>
     <div id="music">
         <span></span>
         <span></span>
@@ -21,5 +26,6 @@
     <script src="js/clock.js"></script>
     <script src="js/musics.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
 </body>
 </html>
